--- a/source/stylesheets/site/_base.scss
+++ b/source/stylesheets/site/_base.scss
@@ -2,6 +2,12 @@
 // All modules and variables
 @import 'modules/all';
 
+// All modules and variables
+@import 'partials/forms';
+
+// All modules and variables
+@import 'partials/buttons';
+
 
 
 
