--- a/source/stylesheets/site/modules/_body.scss
+++ b/source/stylesheets/site/modules/_body.scss
@@ -21,6 +21,9 @@ body, html {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  &.feed {
+    background: #ffffff;
+  }
 }
 
 
