--- a/source/stylesheets/blog/modules/_containers.scss
+++ b/source/stylesheets/blog/modules/_containers.scss
@@ -1,21 +1,175 @@
+@import "../../neat/neat";
+@import "../../bourbon/bourbon";
 
+@import '../../site/partials/media';
+
+
+@import url('https://fonts.googleapis.com/css?family=Spectral:200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i&subset=latin-ext');
+
+
+.hero {
+	position: relative;
+    z-index: 1;
+	.headingImage { 
+		max-width: 1440px;
+	    margin: 0 auto;
+	    min-height: 200px;
+	    text-align: center;
+	    position: relative;
+	    img {
+	    	width: 100%
+	    }
+	}
+}
+
+.heroTitle {
+    padding: 0.5em 0;
+    text-align: center;
+    p {
+    	text-transform: uppercase;
+    }
+	h1 {
+		font-family: 'Spectral', Helvetica, Arial, sans-serif;
+	    text-align: center;
+	   	font-size: 3rem;
+   		line-height: 2.4rem;
+	}
+    @include grid-media($medium-large-grid){
+ 		h1 {
+ 			font-size: 2rem;
+		}
+     }
+    @include grid-media($small-grid){
+    
+    }
+}
 
 
 .container {
-	width: 100%;
-	max-width: 1200px;
-	padding: 0 10em;
-	margin: 0 auto;
+	&.main {
+	    margin-left: auto;
+	    margin-right: auto;
+	    padding-left: 45px;
+	    padding-right: 45px;
+	    max-width: 1270px;
+    }
+    width: 90%;
+    max-width: 1008px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 7em 0;
 	&.stream {
 	    width: 100%;
 	   	max-width: none;
 	    padding: 0 6em;
 	    margin: 0 auto;
 	}
+	.author-image {
+    	text-align: center;
+    	img {
+		    width: 120px !important;
+		    border-radius: 50%;
+		    text-align: center;
+    	}
+	}
 	.postContent {
-		margin: 0 auto;
+	    background: #f9f9f9;
+	    position: relative;
+	    z-index: 10;
+    	&.heading {
+    		margin-top: -30%;
+	    	text-align: center;
+    		padding: 2em 5em;
+    		p {
+    		   line-height: 1.3rem;
+    		}
+    	}
+    	&.main {
+    		padding: 0 5em;
+    	}
 		img {
 			width: 100%;
 		}
+		p {
+		  	line-height: 2rem;
+		}
+		h2 {
+		   	font-size: 2.2em;
+		}
 	}
+    @include grid-media($medium-large-grid){
+	    &.main { 
+	    	padding-left: 0px;
+	    	padding-right: 0px;
+	    }
+	  	.postContent {
+		 	&.heading {
+		   	 margin-top: -35%;
+		   	 padding: 2em 3em;
+			} 
+			&.main {
+				padding: 0 3em;
+			}
+			h2 {
+		   		font-size: 1.8em;
+			}
+		}  
+    }
+    @include grid-media($small-grid){
+	  	.postContent {
+		 	&.heading {
+		   	 margin-top: -45%;
+		   	 padding: 2em 0.5em;
+			} 
+			&.main {
+				padding: 0 0.5em;
+			}
+		}    
+    }
+}
+
+
+.newsletter-signup {
+    background: #e7e7e7;
+    border-top: 6px solid #282538;
+	border-radius: 0 0 10px 10px;
+    padding: 2em 2em;
+    max-width: 500px;
+    width: 100%;
+    margin: 2em auto 0 auto;
+    &.feed {
+    	margin: 0em auto 0 auto;
+    }
+    hr {
+     width: 80%;
+     border: 1px solid #FFC400;
+    }
+    h3 {
+    	text-align: center;
+    }
+}
+
+
+.discuss {
+	margin: 0 auto;
+    padding: 5em 20em;
+    background: #ffffff;
+    text-align: center;
+    button {
+        background: #cecece;
+	    border: none;
+	    color: #000;
+	    padding: 15px 32px;
+	    width: 80%;
+	    text-align: center;
+	    text-decoration: none;
+	    display: inline-block;
+	    font-size: 16px;
+    }
+    @include grid-media($medium-large-grid){
+    	padding: 3em 3em;
+    }
+    @include grid-media($small-grid){
+    	padding: 3em 1em;   
+    }
 }
