--- a/source/stylesheets/site/partials/_forms.scss
+++ b/source/stylesheets/site/partials/_forms.scss
@@ -1,6 +1,6 @@
 input {
     font-family: "Karla", sans-serif;
-    border: 1px solid rgba(0,0,0,.12);
+    border: 2px solid rgba(0,0,0,.12);
     display: block;
     font-size: 16px;
     margin: 0;
@@ -19,6 +19,22 @@ input:focus {
     outline: none;
 }
 
+
+#form-result {
+    text-align: center;
+  .circle {
+      color: #46ba55;
+      border: 5px solid;
+      height: 200px;
+      width: 200px;
+      border-radius: 50%;
+      margin: 0 auto;
+  }
+   h1 {
+    color: #46ba55;
+    margin-top: 3.3em;
+  }
+}
 
 /* ============================================================
   COMMON
@@ -110,4 +126,12 @@ input.cmn-toggle-round:checked + label:before {
 }
 input.cmn-toggle-round:checked + label:after {
   margin-left: 60px;
+}
+
+
+/* ----- Search Bar ------- */
+
+input#search-box {
+    width: 250px;
+    height: 20px;
 }
