--- a/source/partials/_header.haml
+++ b/source/partials/_header.haml
@@ -10,34 +10,38 @@
 %header.mix-dropdown
   .middle.logo-center.mobile
     %span
-      %img= link_to image_tag( 'cheesemix-fresh-blog-logo.png'), 'http://blog.cheesemix.com'
+      %img= link_to image_tag( 'cheesemix-fresh-blog-logo.png'), '/'
 
-    %nav.mobile-nav mobile
+    %nav.mobile-nav.mobile
+      %a{ :href => "#0", :class => "nav-trigger"}
+        Open Nav
+        %span{ :aria => { :hidden => "true"}}
+
 
 
   %nav.main-nav
-    %img= link_to image_tag( 'cheesemix-fresh-blog-logo.png'), 'http://blog.cheesemix.com'
+    %img= link_to image_tag( 'cheesemix-fresh-blog-logo.png'), '/'
 
     %ul.right
-      %li.has-dropdown.gallery
+      %li
         %a{ :href => "/catagories/recipes/" }
           Recipes
-      %li.has-dropdown.gallery
+      %li
         %a{ :href => "/catagories/insights/" }
           Insights
-      %li.has-dropdown.gallery
+      %li
         %a{ :href => "/catagories/marketing/" }
           Marketing
-      %li.has-dropdown.gallery
+      %li
         %a{ :href => "/catagories/design/" }
           Design
-      %li.has-dropdown.gallery
+      %li
         %a{ :href => "/catagories/customer-support/" }
           Customer Support
-      %li.has-dropdown.gallery
-        %a{ :href => "/catagories/product-management/" }
-          Product Management
-      %li.has-dropdown.gallery
+      %li
+        %a{ :href => "/catagories/customer-support/" }
+          Podcast
+      %li
         %a{ :href => "/catagories/updates/" }
           Updates
       %li
@@ -47,7 +51,71 @@
 
   .mix-dropdown-wrapper
     .dropdown-list
+
       %ul
-        #how-it-works
-          %a{ :href => "{{ site_url('how-it-works') }}", :class => "label"}
-            How It Works
+
+        %li#catagories.dropdown.gallery
+          %a{ :href => "#0", :class => "label"} 
+            Catagories
+
+          .content 
+
+            %ul
+              %li
+                %a{ :href => "{{ site_url('how-it-works') }}"}
+                  Recipes
+              %li
+                %a{ :href => "{{ site_url('how-it-works') }}"}
+                  Insights
+              %li
+                %a{ :href => "{{ site_url('how-it-works') }}"}
+                  Marketing
+              %li
+                %a{ :href => "{{ site_url('how-it-works') }}"}
+                  Design
+              %li
+                %a{ :href => "{{ site_url('how-it-works') }}"}
+                  Customer Support
+              %li
+                %a{ :href => "{{ site_url('how-it-works') }}"}
+                  Podcast
+              %li
+                %a{ :href => "{{ site_url('how-it-works') }}"}
+                  Updates
+
+
+        %li
+          %form{ :class => "mobile", :id => "newsletterForm", :action => "https://api.formbucket.com/f/buk_BdpmYHxiTKTbHwkUtT5zPj58", :method => "post", :data => { :drip => { :embedded =>  { :form => '34383374'}}}}
+            %h3{ :data => { :drip => { :attribute => 'headline'}}} Join The Fresh by Cheesemix Newsletter for yummy recipes and &#83565 off our products
+            %hr
+            %div{ :data => { :drip => { :attribute => 'description'}}}
+            %div 
+              %input{:type => "text", :name => "fields[first_name]", :value => "", :placeholder => "Alice", :class => "mobile"}
+              #error
+            %div
+              %input{:type => "email", :name => "fields[email]", :value => "", :placeholder => "alice@xyz.com", :class => "mobile"}
+              #error
+            %div
+              %input{ :type => "text", :name => "__bucket_trap__", :value => "", :style => "display: none" }
+              %input{ :class => "btn-mix news-mobile", :type => "submit", :name => "submit", :value => "Let&#39;s do it!", :data => { :drip => { :attribute => 'sign-up-button'}}}
+          #form-result
+
+
+        %li#about
+          %a{ :href => "//cheesemix.com", :class => "label" }
+            About Cheesemix
+        %li#story
+          %a{ :href => "//cheesemix.com/our-story", :class => "label"}
+            Our Story
+        %li#careers
+          %a{ :href => "//cheesemix.com/careers", :class => "label"}
+            Careers
+        %li#authors
+          %a{ :href => "/meet-our-authors", :class => "label" }
+            Meet The Authors
+
+
+
+
+  .scroll-line
+
