--- a/source/partials/_newsletterForm.haml
+++ b/source/partials/_newsletterForm.haml
@@ -1,6 +1,6 @@
 .newsletter-signup.feed
   %form{ :id => "newsletterForm", :action => "https://api.formbucket.com/f/buk_BdpmYHxiTKTbHwkUtT5zPj58", :method => "post", :data => { :drip => { :embedded =>  { :form => '34383374'}}}}
-    %h3{ :data => { :drip => { :attribute => 'headline'}}} Join The Fresh by Cheesemix Newsletter for yummy recipes and £5 off our products
+    %h3{ :data => { :drip => { :attribute => 'headline'}}} Join The Fresh by Cheesemix Newsletter for yummy recipes and &#83565 off our products
     %hr
     %div{ :data => { :drip => { :attribute => 'description'}}}
     %div 
