--- a/source/partials/foot.erb
+++ b/source/partials/foot.erb
@@ -3,6 +3,11 @@
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 
+  
+  <script src="/javascripts/readingTime.js"></script>
+
+  <script src="/javascripts/modernize.js"></script>
+  <script src="/javascripts/cheesemix-nav.js"></script>
 
 
   <!-- Drip -->
@@ -20,6 +25,16 @@
       var s = document.getElementsByTagName('script')[0];
       s.parentNode.insertBefore(dc, s);
     })();
+  </script>
+
+
+  <script type="text/javascript">
+        // grab an element
+      var myElement = document.querySelector("header");
+      // construct an instance of Headroom, passing the element
+      var headroom  = new Headroom(myElement);
+      // initialise
+      headroom.init(); 
   </script>
 
 
@@ -66,9 +81,6 @@
     search.start();
   </script>
 
-
-
-<script src="/javascripts/readingTime.js"></script>
 
 <script type="text/javascript">
 $('article').readingTime();
