--- a/source/post/show.html.haml
+++ b/source/post/show.html.haml
@@ -15,47 +15,48 @@
 		.headingImage
 			%img{src: @imageUrl, description: @imageTitle}
 	.container.main#article
-		.postContent.heading{itemscope: '', itemtype: 'http://schema.org/Person', itemprop: 'author'}
-			.author-image
-				%img{src: @authorPhoto, description: @imagePhotoTitle}
-			%p
-				%b{itemprop: 'name'}
-					= @authorName
-			%p{itemprop: 'description'}
-				= @authorBiography
-		.postContent.main{itemprop: 'articleBody'}
+		.postContent
+			.heading{itemscope: '', itemtype: 'http://schema.org/Person', itemprop: 'author'}
+				.author-image
+					%img{src: @authorPhoto, description: @imagePhotoTitle}
+				%p
+					%b{itemprop: 'name'}
+						= @authorName
+				%p{itemprop: 'description'}
+					= @authorBiography
+			.main{itemprop: 'articleBody'}
 
-			%h2= @subtitle
-			= Markdown.new(@body).to_html
+				%h2= @subtitle
+				= Markdown.new(@body).to_html
 
-			.social
-				.sharethis-inline-reaction-buttons
-				.sharethis-inline-share-buttons
+				.social
+					.sharethis-inline-reaction-buttons
+					.sharethis-inline-share-buttons
 
 
 
-			.newsletter-signup
-				%form{ :id => "newsletterForm", :action => "https://api.formbucket.com/f/buk_BdpmYHxiTKTbHwkUtT5zPj58", :method => "post", :data => { :drip => { :embedded =>  { :form => '34383374'}}}}
-					%h3{ :data => { :drip => { :attribute => 'headline'}}} Join The Fresh by Cheesemix Newsletter for yummy recipes and £5 off our products
-					%hr
-					%div{ :data => { :drip => { :attribute => 'description'}}}
-					%div 
-						%label{ :for => "fields[first_name]" } First Name
-						%br
-						%input{:type => "text", :name => "fields[first_name]", :value => "", :placeholder => "Alice"}
-						.error
-					%div
-						%label{ :for => "fields[email]" } Email Address
-						%br
-						%input{:type => "email", :name => "fields[email]", :value => "", :placeholder => "alice@xyz.com"}
-						.error
-					%div
-						%input{ :type => "text", :name => "__bucket_trap__", :value => "", :style => "display: none" }
-						%input{ :class => "btn-mix main", :type => "submit", :name => "submit", :value => "Let&#39;s do it!", :data => { :drip => { :attribute => 'sign-up-button'}}}
-				#form-result
+				.newsletter-signup
+					%form{ :id => "newsletterForm", :action => "https://api.formbucket.com/f/buk_BdpmYHxiTKTbHwkUtT5zPj58", :method => "post", :data => { :drip => { :embedded =>  { :form => '34383374'}}}}
+						%h3{ :data => { :drip => { :attribute => 'headline'}}} Join The Fresh by Cheesemix Newsletter for yummy recipes and £5 off our products
+						%hr
+						%div{ :data => { :drip => { :attribute => 'description'}}}
+						%div 
+							%label{ :for => "fields[first_name]" } First Name
+							%br
+							%input{:type => "text", :name => "fields[first_name]", :value => "", :placeholder => "Alice"}
+							.error
+						%div
+							%label{ :for => "fields[email]" } Email Address
+							%br
+							%input{:type => "email", :name => "fields[email]", :value => "", :placeholder => "alice@xyz.com"}
+							.error
+						%div
+							%input{ :type => "text", :name => "__bucket_trap__", :value => "", :style => "display: none" }
+							%input{ :class => "btn-mix news-main", :type => "submit", :name => "submit", :value => "Let&#39;s do it!", :data => { :drip => { :attribute => 'sign-up-button'}}}
+					#form-result
 
-			.tags
-				%b= tags
+				.tags
+					%b= tags
 
 
 
