--- a/source/stylesheets/site/modules/_footer.scss
+++ b/source/stylesheets/site/modules/_footer.scss
@@ -50,8 +50,9 @@ $footer-container: (
     right: 0;
     bottom: 0;
     left: 0;
-    padding: 0vh 3vh;
-    background-color: #f2f2f2;
+    padding: 2vh 3vh;
+    margin-top: 40px;
+    background-color: #16141d;
     text-align: center;
 }
 
