--- a/source/stylesheets/site/partials/_forms.scss
+++ b/source/stylesheets/site/partials/_forms.scss
@@ -6,11 +6,21 @@ input {
     margin: 0;
     width: 100%;
     text-align: left;
-    border-radius: 5px;
+    border-radius: 3px;
     padding: 20px;
     margin: 10px 0;
     background: #FCFCFC;
     color: inherit;
+    &.mobile {
+      border: 1px solid #7e7e7e;
+      font-size: 16px;
+      padding: 10px;
+      background: #cacaca;
+      &:focus {
+        border: 2px solid #342680;
+        outline: none;
+      }
+    }
 }
 
 
