Blog feed re-design

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -1,17 +1,7 @@
 
 
-%article.postFeedContainer.hero
+%article.postFeedContainer.hero.home
 	.grid--twos
-		- all_articles[0...1].each do |article|
+		- all_articles[0...10].each do |article|
 			= partial "hero", locals: { article: article }
 
-%article.postFeedContainer#article
-	.grid--twos
-		- all_articles[1...3].each do |article|
-			= partial "featured", locals: { article: article }
-
-%article.postFeedContainer#article
-	.grid--twos
-		.article-gallery		
-			- all_articles[1...8].each do |article|
-				= partial "article", locals: { article: article }
