--- a/source/catagories/index.html.haml
+++ b/source/catagories/index.html.haml
@@ -1,11 +1,6 @@
 
-%article.postFeedContainer.hero
+%article.postFeedContainer.hero.home
 	.grid--twos
-		- all_articles[0...1].each do |article|
+		- all_articles[0...10].each do |article|
 			= partial "hero", locals: { article: article }
 
-
-%article.postFeedContainer#article
-	.grid--twos		
-		- category_feed[1...6].each do |category|
-			= partial "category", locals: { category: category }
