--- a/source/stylesheets/site/modules/_body.scss
+++ b/source/stylesheets/site/modules/_body.scss
@@ -12,7 +12,7 @@ html {
 }
 
 body, html {
-  font-family: "Karla", sans-serif !important;
+  font-family: "Lato", sans-serif !important;
   width: 100%;
   min-height: 100%;
   margin: 0; 
@@ -42,7 +42,7 @@ a:hover {
 }
 
 h1, h2 {
-    font-family: "Karla", sans-serif;
+    font-family: "Sans Source Pro", sans-serif;
 }
 
 
