--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -30,6 +30,10 @@
     %meta{ :property => "og:description", :content => current_page.data }
     %meta{ :property => "og:image", :content => "//static01.nyt.com/images/2015/02/19/arts/international/19iht-btnumbers19A/19iht-btnumbers19A-facebookJumbo-v2.jpg" }
 
+    %link{ :rel => 'stylesheet', :href => 'https://cdn.jsdelivr.net/docsearch.js/2/docsearch.min.css'}
+
+    %script{ :type => 'text/javascript', :src => 'https://cdn.jsdelivr.net/docsearch.js/2/docsearch.min.js'}
+
 
     = stylesheet_link_tag "main"
 
